welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: identifier expected but '(' found.
	S.(0) = T.(H-1)
          ^Array1:13: error: identifier expected but '(' found.
	S.(0) = T.(H-1)
                  ^Array1:16: error: identifier expected but '(' found.
		S.(l)=T.(k)
                  ^Array1:16: error: identifier expected but '(' found.
		S.(l)=T.(k)
                        ^Array1:33: error: identifier expected but '(' found.
				setColorBrosse(S.(d))
                                                 ^